<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rootLayout"
    android:background="@color/dialog_primary"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_margin"
        android:layout_marginEnd="@dimen/default_margin"
        android:layout_marginBottom="@dimen/default_margin"
        android:text="@string/dialog_exit_do_you_want_to_close_app"
        android:textColor="@color/text_primary"
        android:textSize="@dimen/font.20"
        app:layout_constraintStart_toStartOf="@id/yes_btn"
        app:layout_constraintTop_toTopOf="parent"/>

    <Button
        android:id="@+id/yes_btn"
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:layout_marginStart="@dimen/default_margin"
        android:layout_marginTop="@dimen/dialog_top_margin"
        android:layout_marginEnd="@dimen/default_margin"
        android:layout_marginBottom="@dimen/dialog_top_margin"
        android:background="@drawable/button"
        android:text="@string/yes"
        android:textColor="@color/text_primary"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/no_btn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/no_btn"
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:layout_marginTop="@dimen/default_margin"
        android:layout_marginEnd="@dimen/default_margin"
        android:layout_marginBottom="@dimen/default_margin"
        android:background="@drawable/button"
        android:text="@string/no"
        android:textColor="@color/text_primary"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/yes_btn"
        app:layout_constraintTop_toTopOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>
