<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rootLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dialog_primary">

    <!--on below line we are creating a radio group-->
    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/real_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.80">


        <!--on below line we are creating a radio buttons-->
        <RadioButton
            android:id="@+id/btnWeb"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:buttonTint="@color/text_primary"
            android:padding="4dp"
            android:text="@string/web"
            android:textAlignment="center"
            android:textColor="@color/text_primary"
            android:textSize="20sp"
            android:visibility="gone" />

        <RadioButton
            android:id="@+id/btnNative"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:buttonTint="@color/text_primary"
            android:padding="4dp"
            android:text="@string/natives"
            android:textAlignment="center"
            android:textColor="@color/text_primary"
            android:textSize="20sp"
            android:visibility="gone" />

    </RadioGroup>


    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_margin"
        android:layout_marginEnd="@dimen/default_margin"
        android:layout_marginBottom="@dimen/default_margin"
        android:text="@string/play_mode_dialog_play_mode"
        android:textColor="@color/text_primary"
        android:textSize="@dimen/font.20"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="@id/real_button"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/real_code"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/text_primary"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@id/real_button"
        app:layout_constraintStart_toStartOf="@id/real_button"
        tools:text="test" />

    <Button
        android:id="@+id/real_button"
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:layout_marginStart="@dimen/default_margin"
        android:layout_marginTop="130dp"
        android:layout_marginEnd="@dimen/default_margin"
        android:layout_marginBottom="@dimen/dialog_top_margin"
        android:background="@drawable/button"
        android:text="@string/play_mode_dialog_real"
        android:textColor="@color/text_primary"
        android:textSize="14sp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/test_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/test_code"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/text_primary"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@id/test_button"
        app:layout_constraintStart_toStartOf="@id/test_button" />

    <Button
        android:id="@+id/test_button"
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="@dimen/default_margin"
        android:layout_marginBottom="@dimen/default_margin"
        android:background="@drawable/button"
        android:text="@string/play_mode_dialog_test"
        android:textColor="@color/text_primary"
        android:textSize="14sp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/real_button"
        app:layout_constraintTop_toTopOf="parent" />

    <ProgressBar
        android:id="@+id/loader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_margin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.51" />

</androidx.constraintlayout.widget.ConstraintLayout>
